<!-- res/layout/fragment_reviews.xml -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Add Review Section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addreview"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <!-- Review Input -->
        <EditText
            android:id="@+id/editTextReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yourreview"/>

        <!-- Rating Input -->
        <EditText
            android:id="@+id/editTextRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rating"
            android:inputType="numberDecimal"
            android:layout_marginBottom="16dp"/>

        <!-- Add Review Button -->
        <Button
            android:id="@+id/buttonAddReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addreview"
            android:layout_gravity="center"
            android:backgroundTint="@color/black"
            android:layout_marginBottom="16dp"/>

        <!-- Reviews Section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reviews"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <!-- RecyclerView for Reviews -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewReviews"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingTop="8dp"/>

    </LinearLayout>
</ScrollView>
